fix: collapse em progresso

--- a/src/app/timeline/timeline.component.css
+++ b/src/app/timeline/timeline.component.css
@@ -139,10 +139,10 @@ header{
 .card-section:hover{
 	box-shadow:1px 1px 20px #d2d2d2;
 }
-.botaoFiltro{
+/* .botaoFiltro{
     width: 130px;
     height: 30px;
-}
+} */
 .card-filtro{
     position:fixed;
     margin-top: -40px;
@@ -195,4 +195,8 @@ header{
 .botaoFiltro{
   width: 100%;
   height: 30px;
+}
+
+.campoFiltro{
+  width: 100%;
 }
